<?xml version="2.0"?>
<package format="2">
  <name>ros_package_pip_depends</name>
  <version>0.0.0</version>
  <description>
  This is an example ros pacakge with pip dependencies
  </description>
  <maintainer email="lukefrasera@gmail.com">Luke Fraser</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>

  <build_depend>python-tzlocal-pip</build_depend>

  <exec_depend>python-tzlocal-pip</exec_depend>
</package>